# BES

./: .gitignore  LICENSE  README.md
inference/: README.md  pyproject.toml
inference/results/circle_packing/: 1.py  2.py  3.py
inference/results/circle_packing_rect/: 1.py  2.py  3.py
inference/results/heilbronn_convex/: 1.py  2.py  3.py
inference/shinka/bidirectional_search/: __init__.py  decompose.py  expander.py  goal_tree.py
inference/shinka/core/: async_novelty_judge.py  async_runner.py  sampler.py
inference/shinka/database/: async_dbase.py  dbase.py  inspirations.py  islands.py  parents.py  score.py
inference/shinka/edit/: async_apply.py
inference/shinka/embed/: client.py
inference/shinka/llm/: client.py
inference/shinka/prompts/: __init__.py  prompts_cross.py  prompts_diff.py  prompts_full.py
inference/shinka/utils/: __init__.py
inference/tasks/circle_packing/: bench_hooks.py  evaluate.py  goal_tree_template.json  run_evo.py  run_gpt5_slurm.sh  shinka_backward_adaptive_gpt5.yaml
inference/tasks/circle_packing_rect/: bench_hooks.py  evaluate.py  goal_tree_template.json  run_evo.py  run_gpt5_slurm.sh  shinka_backward_adaptive_gpt5.yaml
inference/tasks/heilbronn_convex/: bench_hooks.py  evaluate.py  goal_tree_template.json  run_evo.py  shinka_backward_adaptive_gpt5.yaml
logical/: README.md
logical/data/: eval.parquet  train.parquet
logical/verl/: .gitignore
multihop/: .gitignore  LICENSE  README.md  pyproject.toml
multihop/scripts/: prepare_hop_split_musique.py  run_backward_slurm.sh  run_bes_local.sh  run_bes_slurm.sh  (+1 more)
(+43 files in other folders)
