[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bes-inference"
dynamic = ["version"]
description = "Bidirectional Evolutionary Search (BES) for self-improving language models — inference-time search."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai",
    "numpy",
    "pandas",
    "anthropic",
    "requests",
    "boto3",
    "pydantic",
    "backoff",
    "python-dotenv",
    "instructor",
    "python-Levenshtein",
    "radon",
    "unidiff",
    "dill",
    "matplotlib",
    "networkx",
    "seaborn",
    "moviepy",
    "scikit-learn",
    "adjustText",
    "markdown",
    "aiofiles",
    "google-genai",
    "psutil",
    "httpx==0.27"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "shinka.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["shinka*"]

[tool.setuptools.package-data]
shinka = [
    "embed/providers/*.csv",
    "llm/providers/*.csv",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "black",
    "isort",
    "flake8",
]
